--- a/src/App.css
+++ b/src/App.css
@@ -178,8 +178,15 @@ span.App {
     resize: vertical;
 }
 .App-font-awesome-spinner {
-    margin-left: 20px;
+    display: block;
+    margin-left: 30px;
     color: red;
+}
+.fa-spin { -webkit-filter: blur(0); }
+.App-spinner-span {
+    display: block;
+    color: black;
+    margin-left: 30px;
 }
 .panel-title {
     cursor: pointer;
@@ -886,10 +893,6 @@ path.link {
 }
 .App-search-text-input {
     margin-bottom: 8px;
-}
-.App-spinner {
-    color: red;
-    margin-left: 20px;
 }
 .rdw-editor-main {
     background-color: white;
