--- a/src/App.css
+++ b/src/App.css
@@ -960,3 +960,9 @@ path.link {
 .App-Download-Col {
     text-align: center;
 }
+.App-video-player {
+    margin-top: 50px;
+}
+.App-Help-panel {
+
+}
