--- a/src/App.css
+++ b/src/App.css
@@ -966,3 +966,12 @@ path.link {
 .App-Help-panel {
 
 }
+.App-Youtube-panel {
+
+}
+.App-Youtube-text {
+
+}
+.App-Youtube-player {
+    margin-top: 50px;
+}
