--- a/src/App.css
+++ b/src/App.css
@@ -1073,3 +1073,19 @@ a.rdw-mention-link {
 .App-page-terms {
     margin-top: 0px !important;
 }
+
+.App-PDF-Title {
+    padding-left: 4px;
+    margin-bottom: 4px;
+}
+.App-PDF-Author {
+    padding-left: 4px;
+    margin-bottom: 4px;
+}
+.App-PDF-BibStyle-Dropdown {
+    margin-left: 5px;
+}
+
+.App-See-Biblatex {
+    margin-top: 30px;
+}
